[package]
name = "shielded-observer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", features = ["default"] }
egui_plot = "0.27"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["clock", "std"] }
polars = { version = "0.41", features = ["csv", "json", "lazy"] }
rfd = "0.14"                   
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
